--- a/EncriptacionCurvaEliptica.ipynb
+++ b/EncriptacionCurvaEliptica.ipynb
@@ -5,14 +5,7 @@
     "colab": {
       "name": "EncriptacionCurvaEliptica",
       "provenance": [],
-      "collapsed_sections": [
-        "u1QPSbmzcSrW",
-        "gyg4vJLndKTN",
-        "hiHMLxChdm-g",
-        "V7k-z1oOPm0z",
-        "bvoIpqPnd6lS",
-        "wHRaoRs1oGiY"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +22,21 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Jaider0111/Encriptacion_con_curva_eliptica/blob/main/EncriptacionCurvaEliptica.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DWayK3MsLRqK"
+      },
+      "source": [
+        "#**Encriptacion por medio de la Curva Eliptica y algoritmo de cifrado ELGamal**\r\n",
+        "---\r\n",
+        "##**Integrantes**\r\n",
+        "\r\n",
+        "Cesar Esteban Diaz Medina\r\n",
+        "\r\n",
+        "Jaider Andres Pinto Pinto"
       ]
     },
     {
@@ -186,6 +194,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "TtOaHKHpeg9u"
+      },
+      "source": [
+        "Por ultimo se presenta el codigo de la Curva Eliptica y de la encriptacion de ElGamal\r\n",
+        "\r\n",
+        "---\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "wHRaoRs1oGiY"
       },
       "source": [
@@ -215,18 +235,6 @@
         "\r\n",
         "A continuacion se presenta la comprobacion de porque este algoritmo funciona:[3]\r\n",
         "$$C_2−d⋅C_1 = (M + r * Q) - ( d* r * P ) = M + (r * d * P) - (r * d * P) = M $$  "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TtOaHKHpeg9u"
-      },
-      "source": [
-        "Por ultimo se presenta el codigo de la Curva Eliptica y de la encriptacion de ElGamal\r\n",
-        "\r\n",
-        "---\r\n",
-        "\r\n"
       ]
     },
     {
